fix system notification icon too small

--- a/frontend/src/routes/styles.css
+++ b/frontend/src/routes/styles.css
@@ -385,8 +385,8 @@ img {
 }
 
 .chatlog__system-notification-icon {
-	width: 18px;
-	height: 18px
+	width: 24px;
+	height: 24px
 }
 
 .chatlog__system-notification-author {
